outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_23-57-19/evaluations/problem_eval5771127871168737049_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaults to a greedy farthest-neighbor approach unless a slightly closer node offers a better combined cost. The hybrid logic ensures a trade-off between speed and solution quality.}
                                                                                                                                                                                         ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaults to a greedy farthest-neighbor approach unless a slightly closer node offers a better combined cost. The hybrid logic ensures a trade-off between speed and solution quality.}
                                                                                                                                                                                         ^
SyntaxError: unmatched '}'
